--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,18 @@
 {
-    "name": "awsm/lib-text-template",
-    "description": "Awesome text template functionality. Easy and clean text template handling.",
+    "name": "awsm/lib-template",
+    "description": "Awesome template functionality. Easy and clean text template handling.",
     "version": "1.0.0-beta-1",
     "license": "GPL-2.0-or-later",
     "autoload": {
         "psr-4": {
-            "AWSM\\LibTextTemplate\\" : "src/"
+            "AWSM\\LibTemplate\\" : "src/"
         }
     },
     "require-dev": {
         "phpunit/phpunit": "^9",
         "phpunit/php-code-coverage": "^8.0"
+    },
+    "require": {
+        "awsm/lib-file": "dev-develop"
     }
 }
